--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "babel": "babel src --out-dir dist --ignore **/*.test.js,**/__mocks__/**",
     "build": "npm run babel",
-    "eslint": "eslint src spec acceptance",
+    "eslint": "eslint src",
     "jest": "jest",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build",
