--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "type": "git",
     "url": "git+https://github.com/iopipe/iopipe-plugin-trace.git"
   },
-  "files": ["dist/"],
+  "files": [
+    "dist/"
+  ],
   "keywords": [
     "serverless",
     "analytics",
@@ -48,11 +50,16 @@
     "prettier": "^1.5.2"
   },
   "dependencies": {
-    "iopipe": "^1.0.0",
+    "@iopipe/core": "^1.5.0",
     "performance-node": "^0.2.0"
   },
-  "pre-commit": ["test"],
+  "pre-commit": [
+    "test"
+  ],
   "jest": {
-    "coveragePathIgnorePatterns": ["/node_modules/", "dist"]
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "dist"
+    ]
   }
 }
