--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@iopipe/trace",
-  "version": "0.3.0",
+  "version": "0.0.0-semantically-released",
   "description": "IOpipe plugin for tracing metrics",
   "main": "dist/index.js",
   "scripts": {
-    "babel": "babel src --out-dir dist --ignore **/*.test.js,**/__mocks__/**",
-    "build": "npm run babel",
-    "eslint": "eslint src",
-    "jest": "jest",
-    "prepare": "npm run build",
+    "build": "iopipe-scripts build --ignore __mocks__/*,*.test.js",
+    "commit": "iopipe-scripts commit",
+    "lint": "iopipe-scripts lint",
     "prepublishOnly": "npm run build",
-    "test": "npm run eslint && npm run build && npm run jest"
+    "prepare": "npm run build",
+    "test": "iopipe-scripts test",
+    "validate": "iopipe-scripts validate"
   },
   "repository": {
     "type": "git",
@@ -35,20 +35,10 @@
   "homepage": "https://github.com/iopipe/iopipe-plugin-trace#readme",
   "devDependencies": {
     "@iopipe/core": "^1.x",
+    "@iopipe/scripts": "^1.4.1",
     "aws-lambda-mock-context": "^3.0.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-preset-env": "^1.6.0",
     "delay": "^2.0.0",
-    "eslint": "^3.12.2",
-    "eslint-plugin-jasmine": "^2.5.0",
-    "eslint-plugin-jest": "^20.0.3",
-    "eslint-plugin-prettier": "^2.1.2",
-    "jest": "^20.0.4",
-    "lodash": "^4.17.4",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.5.2"
+    "lodash": "^4.17.4"
   },
   "dependencies": {
     "performance-node": "^0.2.0"
@@ -64,5 +54,16 @@
   },
   "peerDependencies": {
     "@iopipe/core": "1.x"
-  }
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/@iopipe/scripts/eslint.js",
+    "rules": {
+      "import/prefer-default-export": 0
+    }
+  },
+  "eslintIgnore": [
+    "node_modules",
+    "dist",
+    "coverage"
+  ]
 }
