--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@iopipe/scripts": "^1.4.1",
     "aws-lambda-mock-context": "^3.0.0",
     "delay": "^2.0.0",
+    "got": "^8.3.1",
     "lodash": "^4.17.4"
   },
   "dependencies": {
