--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "flat": "^4.0.0",
+    "isarray": "^2.0.4",
     "lodash.pickby": "^4.6.0",
     "performance-node": "^0.2.0",
     "shimmer": "^1.2.0",
