--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iopipe/trace",
-  "version": "0.0.0-semantically-released",
+  "version": "0.0.0-autoHttp.0",
   "description": "IOpipe plugin for tracing metrics",
   "main": "dist/index.js",
   "scripts": {
