--- a/package.json
+++ b/package.json
@@ -39,10 +39,17 @@
     "@iopipe/scripts": "^1.4.1",
     "aws-lambda-mock-context": "^3.0.0",
     "delay": "^2.0.0",
-    "lodash": "^4.17.4"
+    "got": "^8.3.1",
+    "lodash": "^4.17.4",
+    "superagent": "^3.8.3"
   },
   "dependencies": {
-    "performance-node": "^0.2.0"
+    "flat": "^4.0.0",
+    "isarray": "^2.0.4",
+    "lodash.pickby": "^4.6.0",
+    "performance-node": "^0.2.0",
+    "shimmer": "^1.2.0",
+    "uuid": "^3.2.1"
   },
   "pre-commit": [
     "test"
