--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "npm run build",
     "release": "iopipe-scripts release",
     "test": "iopipe-scripts test",
+    "testRedis": "yarn run jest src/shimmerRedis.test.js --forceExit --verbose",
     "validate": "iopipe-scripts validate"
   },
   "repository": {
@@ -45,9 +46,11 @@
   },
   "dependencies": {
     "flat": "^4.0.0",
+    "ioredis": "^4.9.0",
     "isarray": "^2.0.4",
     "lodash.pickby": "^4.6.0",
     "performance-node": "^0.2.0",
+    "semver": "^6.0.0",
     "shimmer": "^1.2.0",
     "uuid": "^3.2.1"
   },
