Refactoring to move wrapping code/tests to src/plugins directory, rename redis wrapper to ioredis (anticipating other redis wrappers), shortening redis env var, specifying ioredis in env var.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "npm run build",
     "release": "iopipe-scripts release",
     "test": "iopipe-scripts test",
-    "testRedis": "yarn run jest src/shimmerRedis.test.js --forceExit --verbose",
+    "testRedis": "yarn run jest src/plugins/ioredis.test.js --forceExit --verbose",
     "validate": "iopipe-scripts validate"
   },
   "repository": {
