--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "isarray": "^2.0.4",
     "lodash.pickby": "^4.6.0",
     "performance-node": "^0",
+    "semver": "^6.3.0",
     "shimmer": "^1.2.1",
     "uuid": "^3.2.1"
   },
