--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "got": "^8.3.1",
     "ioredis": "^4",
     "lodash": "^4.17.4",
+    "mongodb": "^3.3",
     "redis": "^2",
     "superagent": "^3.8.3"
   },
